<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_daily_goal_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_headline_small"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/water_goal"
        app:boxStrokeColor="@color/primary"
        app:hintTextColor="@color/primary"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_daily_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/default_daily_goal_value" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
